--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/native-geocoder": "^5.20.0",
     "@ionic-native/onesignal": "^5.19.1",
     "@ionic-native/paypal": "^5.19.1",
+    "@ionic-native/sign-in-with-apple": "^5.36.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic-native/stripe": "^5.20.0",
@@ -72,6 +73,7 @@
     "cordova-plugin-device": "2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^4.0.0",
+    "cordova-plugin-sign-in-with-apple": "^0.1.2",
     "cordova-plugin-splashscreen": "5.0.2",
     "cordova-plugin-statusbar": "2.4.2",
     "cordova-plugin-whitelist": "1.3.3",
@@ -128,7 +130,8 @@
         "ANDROID_SUPPORT_V4_VERSION": "27.+",
         "LOCATION_WHEN_IN_USE_DESCRIPTION": "This app wants to get your location while this app runs only.",
         "LOCATION_ALWAYS_USAGE_DESCRIPTION": "This app wants to get your location always, even this app runs in background."
-      }
+      },
+      "cordova-plugin-sign-in-with-apple": {}
     },
     "platforms": [
       "browser",
